# zentry-trust

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: ziti_step2_enroll_quickstart.sh  ziti_step2_identities_quickstart.sh  ziti_step3_service_policies.sh
src/zentry_trust_demo/: cli.py  common.py  traditional.py  ziti_echo.py  ziti_proxy.py  zitify_http.py
zentry-trust/: compose.yml
