[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zentry-trust"
version = "0.1.0"
description = "Zentry-Trust: minimal Python demos for traditional vs OpenZiti Zero Trust app access"
requires-python = ">=3.10"
dependencies = [
  "openziti==1.5.0",
]

[project.scripts]
zentrytrust = "zentry_trust_demo.cli:main"
zentry = "zentry_trust_demo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
